--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
             width: 150px;
             height: 80px;
             border-radius: 10px;
+            border: 2px solid white;
             color: black;
             font-size: 30px;
             background-color: green;
@@ -185,6 +186,7 @@
     </script>
 </body>
 </html>
+
 
 
 
